SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    10 Aug 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150810
Tag Summary: Increase size of char_len and POP_CharLength to account for
             tests producing exceptionally long case names

Files Modified:
M       source/POP_KindsMod.F90
M       source/kinds_mod.F90
===============================================================================
Tag Creator: jedwards
Developers:  jedwards
Tag Date:    17 July 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150717
Tag Summary: Changes for pio2 (array length must match dof length)

M       source/ecosys_mod.F90
M       source/io_netcdf.F90
M       source/restart.F90
M       source/tavg.F90


===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    13 July 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150713
Tag Summary: Change all goldbach tests to hobart tests

Files Modified:
M       cimetest/testlist_pop.xml
===============================================================================
Tag Creator: mlevy
Developers:  klindsay, mlevy
Tag Date:    10 July 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150710
Tag Summary: Add tavg fields for total tracer tendency. Use TEND_[shortname]
             e.g. TEND_TEMP for temperature and TEND_SALT for salinity. These
             fields are available for all tracer modules.

Files Modified:
M       source/baroclinic.F90
M       source/passive_tracers.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    1 July 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150701
Tag Summary: Introduce new interface module for dealing with share stream
             code. Note that this will allow removal CCSMCOUPLED macro from