@@ -3,6 +3,18 @@ SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
 Developers:  mlevy
+Tag Date:    13 Aug 2015
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150813
+Tag Summary: Add interfaces to allow accumulate_tavg_field to be called with a
+             single column of data (keeps existing interfaces to accumulate a
+             level at a time as well); also, trimmed exit message in exit_POP()
+
+Files Modified:
+M       source/exit_mod.F90
+M       source/tavg.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  mlevy
 Tag Date:    10 Aug 2015
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150810
 Tag Summary: Increase size of char_len and POP_CharLength to account for
